# BibiLab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  compose.cuda.yml  compose.dev.yml  compose.rocm.yml  compose.yml  dev.sh  install.sh  package-lock.json  spec.md  start.sh
.github/workflows/: ci.yml
backend/: CLAUDE.md  poc_bounded_sections.py  poc_preview_cuts.py  poc_section_boundaries.py  pyproject.toml
backend/scripts/: backfill_sections.py  config_audit.py  migrate_fts_bigram.py  reindex_fts_pinyin.py
backend/scripts/eval/: README.md  lib.py  prelabel.py  queries.yaml  readiness_check.py  review.html  score.py  sweep.py
backend/src/bibilab/: asr_models.py  cleanup.py  config.py  db.py  main.py  model_registry.py  video_status.py  whisper_models.py  worker.py
backend/src/bibilab/adapters/: __init__.py  _ytdlp_common.py  base.py  bilibili.py  tiktok.py  youtube.py
backend/src/bibilab/db/: __init__.py  artifacts.py  connection.py  conversations.py  facets.py  fts.py  jobs.py  lists.py  messages.py  sections.py  segments.py  sources.py
backend/src/bibilab/models/: _enums.py  artifacts.py  asr.py  chat.py  errors.py  eval.py  ingest.py  jobs.py  lists.py  models.py  notes.py  sources.py  whisper.py
backend/src/bibilab/pipeline/: _shared.py  artifact_refine.py  audio.py  chat_inference_pool.py  chat_runs.py  chat_summary.py  chat_tools.py  chunk.py  citation_parser.py  diarize.py  digest.py  embed.py  extract.py  fts_tokens.py  notes.py  punctuate.py  rerank.py  rewriter.py  route.py  section.py  sensevoice.py  transcribe.py
backend/src/bibilab/routers/: _model_gate.py  artifacts.py  asr.py  auth.py  chat.py  config_router.py  eval.py  health.py  ingest.py  jobs.py  lists.py  models.py  notes.py  proxy.py  sources.py  transcripts.py  whisper.py
backend/src/bibilab/scripts/: backfill_sections.py  seed_long_source.py
backend/src/locus/: cleanup.py  config.py  db.py  main.py  vault.py  whisper_models.py  worker.py
backend/src/locus/adapters/: base.py  bilibili.py
backend/src/locus/models/: ingest.py  jobs.py  lists.py  notes.py  transcripts.py  whisper.py
backend/src/locus/pipeline/: chunk.py  embed.py  extract.py  notes.py  transcribe.py
backend/src/locus/routers/: config_router.py  health.py  ingest.py  jobs.py  lists.py  notes.py  transcripts.py  whisper.py
backend/tests/: __init__.py  _section_db_seams.py  conftest.py  factories.py  spike_254_tool_calling_retrieve.py  test_548_config_defaults.py  test_548_download_auth.py  test_548_download_fallback.py  test_548_segmented.py  test_548_truncation_integration.py  test_adapter_routing.py  test_artifact_mind_map.py  test_artifact_refine.py  test_artifacts.py  test_asr_router.py  test_auth.py  test_backfill_sections.py  test_bilibili_adapter.py  test_chat.py  test_chat_grounding.py  test_chat_lifecycle.py  test_chat_rag.py  test_chat_reuse.py  test_chat_rewriter_integration.py  test_chat_runs.py  test_chat_save_artifact.py  test_chat_sse.py  test_chat_summary.py  test_chat_tools.py  test_chunk_dedup.py  test_citation_parser.py  test_citation_registry.py  test_cleanup.py  test_config.py  test_config_thread_safety.py  test_conversation_has_dump.py  test_db.py  test_db_sections.py  test_debug_endpoint.py  test_deleted_apply_source_filter.py  (+48 more)
backend/tests/fixtures/: rewriter_eval.json  three_tool_eval.json
docs/: RAG简介.md  chat_architecture.md  citation_system.md  data_model.md  design-doc.md  ingestion_architecture.md  roadmap.md
docs/internal/: citation_system.md  rag_tuning.md
docs/superpowers/plans/: 2026-04-01-tailwind-design-system.md  2026-05-04-228-tool-calling-retrieval.md
docs/superpowers/specs/: 2026-04-01-tailwind-design-system.md  2026-05-04-248-metadata-tool-design.md
eval/: CLAUDE.md  README.md  pyproject.toml
eval/src/eval/: __init__.py  _utils.py  api.py  claims.py  cli.py  config.py  dashboard.py  generate.py  grader.py  models.py  reporter.py  runner.py  selection.py  storage.py  tui.py
eval/tests/: test_api.py  test_claims.py  test_config.py  test_generate.py  test_grader.py  test_models.py  test_reporter.py  test_runner.py  test_selection.py  test_storage.py
plugin/: .eslintrc.cjs  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
plugin/src/: main.ts
scripts/: reembed_transcripts.py
web/: CLAUDE.md  DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: main.tsx
web/src/app/: LanguageContext.tsx  routes.tsx
web/src/components/auth/: BilibiliQrModal.tsx
web/src/components/chat/: ChatPanel.tsx
web/src/components/debug/: DebugDrawer.tsx  DebugHeader.tsx  JsonTree.tsx  envelopeHints.ts
web/src/components/jobs/: JobActivityProvider.tsx  JobSpirit.tsx  (+3 more)
web/src/lib/: api.ts  artifact-types.ts  artifactTypes.ts  chat-utils.ts  constants.ts  download.ts  health.ts  templates.ts  test-ids.ts  tool-display.ts  types.ts  ui.ts  utils.ts
web/src/pages/: HomePage.tsx  ListDetailPage.tsx  SettingsPage.tsx
web/src/styles/: app.css
web/src/test/: PlaylistPreviewModal.test.tsx  RetrievalLedger.test.tsx  RetrievalLedgerRow.test.tsx  SlotSlider.test.tsx  SourcesListMode.preview.test.tsx  Thumbnail.test.tsx  ToolLedger.test.tsx  ToolLedgerRow.test.tsx  api-create-artifact.test.ts  api.test.ts  app-frame-icons.test.tsx  app-frame.test.tsx  aria-i18n.test.ts  artifact-api.test.ts  artifact-card.test.tsx  artifact-job-provider.test.tsx  artifact-list.test.tsx  artifact-mermaid.test.tsx  artifact.test.tsx  bilibili-qr-modal.test.tsx  chat-citations.test.ts  chat-mode-toggle.test.tsx  chat-panel-sse.test.tsx  chat-panel.test.tsx  chat-rag-observability.test.tsx  chat-utils.test.ts  delete-list-modal.test.tsx  design-tokens.test.ts  digest-accordion-sections.test.tsx  digest-accordion.test.tsx  digest-facets.test.tsx  effect-stability.test.tsx  favicon-inline.test.ts  home-page.test.tsx  i18n-parity.test.ts  identity-panel.test.tsx  job-activity-provider.test.tsx  job-spirit.test.tsx  jobs-badge.test.tsx  lab-panel.test.tsx  (+28 more)
(+74 files in other folders)
