[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibilab"]

[project]
name = "bibilab"
version = "0.1.0"
description = "Bibilab backend — personal video knowledge base"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.30.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "ffmpeg-python>=0.2.0",
    "funasr>=1.2",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pydantic-settings>=2.13.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.42.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.20.0",
    "tokenizers>=0.22.0",
    "yt-dlp>=2026.3.17",
    "pypinyin>=0.55.0",
]

# torch is the only GPU consumer (ASR). cpu and cuda are conflicting dependency
# groups, each pinning torch/torchaudio to a different PyTorch wheel index, so one
# uv.lock covers both variants. cpu is a default group → bare `uv sync` / `uv run`
# get the cpu wheel with no flags; the Docker image overrides with
# `--no-default-groups --group cuda` on NVIDIA hosts.
[tool.uv]
default-groups = ["dev", "cpu"]
conflicts = [
    [{ group = "cpu" }, { group = "cuda" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cuda", group = "cuda" },
]
torchaudio = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cuda", group = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
cpu = [
    "torch>=2.0",
    "torchaudio>=2.0",
]
cuda = [
    "torch>=2.0",
    "torchaudio>=2.0",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that drive the ASGI app via the `client` fixture or hit real SQLite/Chroma",
]
