[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibilab"]

[project]
name = "bibilab"
version = "0.1.0"
description = "Bibilab backend — personal video knowledge base"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.30.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "ffmpeg-python>=0.2.0",
    "funasr>=1.2",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pydantic-settings>=2.13.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.42.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.20.0",
    "tokenizers>=0.22.0",
    "yt-dlp[curl-cffi]>=2026.3.17",
    "pypinyin>=0.55.0",
]

# torch is the only production GPU consumer (FunASR ASR in pipeline/transcribe.py;
# routers/health.py probes but allocates nothing). cpu, cuda and rocm are conflicting
# dependency groups pinning torch/torchaudio to different PyTorch wheel indices;
# uv.lock covers all three; cpu is a default group, so bare `uv sync` installs cpu.
# rocm torch drives AMD GPUs through the same `cuda` device API (HIP under the hood).
[tool.uv]
default-groups = ["dev", "cpu"]
conflicts = [
    [{ group = "cpu" }, { group = "cuda" }, { group = "rocm" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cuda", group = "cuda" },
    { index = "pytorch-rocm", group = "rocm" },
]
torchaudio = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cuda", group = "cuda" },
    { index = "pytorch-rocm", group = "rocm" },
]
# rocm torch pulls pytorch-triton-rocm, published only on the rocm wheel index
# (not PyPI). uv requires a group-scoped source's package to also appear in that
# group's dependency list (below), so it's listed there too; torch pins the version.
pytorch-triton-rocm = [
    { index = "pytorch-rocm", group = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
cpu = [
    "torch>=2.0",
    "torchaudio>=2.0",
]
cuda = [
    "torch>=2.0",
    "torchaudio>=2.0",
]
rocm = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "pytorch-triton-rocm",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that drive the ASGI app via the `client` fixture or hit real SQLite/Chroma",
]
